# wisdom

./: .gitignore  build_all.bat  build_exe.bat  char_count.py  char_count.spec  convert_로스차일드_txt_to_json.py  script_guide.md  tts.md  로스차일드.json  로스차일드.txt  로스차일드_이미지프롬프트.md  로스차일드tts - 복사본.txt  로스차일드tts.txt
0_all/: wisdom_hub.py
1_textTo700Text/: manuscript_700_splitter.py
3_ttsToVoice/: .gitignore  elsub_config.json.bk  requirements.txt  run_elsub_gui.py
4_1pngToJpg/: build.bat  png_to_jpg.py  run_gui.bat  run_png2jpg_gui.py
4_2pngFileName/: build.bat  run_png_rename_gui.py
4_srtToImage/: run_prompt2image_gui.py  srtToImagePG.md
5_video/: .gitignore  build.bat  pyproject.toml  run_scenevid.py  run_scenevid_gui.py
5_video/demo_project/: scene.json  script.md
5_video/md/: videoPG.md  videoPGtemp.md
5_video/scenevid/: __init__.py  assets.py  cli.py  compose_overrides.py  compose_render.py  ffmpeg_render.py  gui_app.py  media_paths.py  motion.py  repo_paths.py  schema.py  script_parse.py  srt_image_effects.py  srt_parse.py  subprocess_util.py  subtitles.py
6_thumbnail/: run_thumbnail_gui.py
7_utube/: .gitignore  requirements.txt  run_utube_gui.py
image_prompt_pipeline/: build_exe.bat  prompt2image.spec  prompt2image_gui.spec  requirements.txt  run_prompt2image.py  run_prompt2image_gui.py
output/: losschild_TTS.txt  meat_001_002_tts.txt  whyDontEatMeatAnimal_TTS.txt  이름.json  이름.srt
prompt/: 0. scriptExamine.md  4. description.md  program.md
scene_video_pipeline/: pyproject.toml  run_scenevid.bat
script/: all.srt  dog_size_variation.txt  (+2 more)
(+217 files in other folders)
